syntax = "proto2";
package nmsg.sie;

import "dnsdedupe.proto";

message NewDomain {
    optional bytes          domain = 1;
    optional uint32         time_seen = 2;

    optional DnsDedupeType  type = 13;
    optional uint32         count = 10;
    optional uint32         time_first = 11;
    optional uint32         time_last = 12;
    optional uint32         zone_time_first = 17;
    optional uint32         zone_time_last = 18;
    optional bytes          response_ip = 14;

    optional bytes          rrname = 3;
    optional uint32         rrtype = 4;
    optional uint32         rrclass = 5;
    optional uint32         rrttl = 6;
    repeated bytes          rdata = 7;

    optional bytes          response = 15;

    optional bytes          bailiwick = 16;

    repeated bytes          keys = 9;

    optional bool           new_domain = 19;
    optional bool           new_rrname = 20;
    optional bool           new_rrtype = 21;
    repeated bool           new_rr = 22;
    optional bool           new_rrset = 23;
}
